--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -25,6 +25,8 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
+      R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
+      R_REMOTES_NO_SUGGESTS: true
 
     steps:
       - name: Install Homebrew
@@ -55,16 +57,19 @@ jobs:
           key: ${{ runner.os }}-r-${{ matrix.config.r }}-${{ hashFiles('**/DESCRIPTION') }}
           restore-keys: ${{ runner.os }}-r-${{ matrix.config.r }}
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
+      - name: Install base packages
+        uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck, any::remotes, any::sessioninfo
-          needs: check
-          repos: |
-            https://cloud.r-project.org
-            https://github.com/CenterForAssessment/SGP/raw/master
-            https://github.com/CenterForAssessment/sgpFlow/raw/master
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          install-method: remotes
+          packages: |
+            any::remotes
+            any::rcmdcheck
+            any::sessioninfo
+
+      - name: Install GitHub packages
+        run: |
+          Rscript -e 'remotes::install_github("CenterForAssessment/SGP", dependencies = TRUE)'
+          Rscript -e 'remotes::install_github("CenterForAssessment/sgpFlow", dependencies = TRUE)'
+        shell: bash
 
       - uses: r-lib/actions/check-r-package@v2
         with:
